[package]
name = "mock-recipe-persistence-endpoints"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
colog = "1.3.0"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
